--- a/io.github.ezQuake.yaml
+++ b/io.github.ezQuake.yaml
@@ -32,7 +32,7 @@ modules:
 - name: ezquake-source
   buildsystem: simple
   build-commands:
-  - make
+  - make LDFLAGS='-Wl,--allow-multiple-definition'
   #  Name change to easily support ARM and Aarch64
   - install -Dm 744 ezquake-linux-${FLATPAK_ARCH} /app/bin/ezquake-linux
   sources:
