--- a/io.github.ezQuake.yaml
+++ b/io.github.ezQuake.yaml
@@ -15,10 +15,10 @@ finish-args:
 - --persist=.ezquake
 
 cleanup:
-- /app/include
-- /app/lib/*.a
-- /app/lib/*.la
-- /app/lib/pkgconfig
+- /include
+- /lib/*.a
+- /lib/*.la
+- /lib/pkgconfig
 
 modules:
 
